2001-01-03  Hugo Tyson  <hmt@redhat.com>

	* tests/linux_echo.c: New file to test for network bandwidth
	limitations in host side.  Builds to a linux version of the
	tcp_echo middleman.

	* tests/make.linux (all): Build linux_echo.

2001-01-03  Hugo Tyson  <hmt@redhat.com>

	* include/dhcp.h (struct dhcp_lease): Define the semaphore pointer
	field in each lease structure.

	* src/lib/dhcp_support.c: Initialize the dhcp_lease structs to
	point to the semaphore "dhcp_needs_attention".

	* src/lib/dhcp_prot.c (alarm_function): Post to the semaphore
	pointed to in the lease structure, rather than one hard-coded.
	This is much cleaner, in that dhcp_prot.c now uses no external
	variables, all state goes through the API.

2000-11-15  Hugo Tyson  <hmt@redhat.com>

	* src/lib/bootp_support.c (init_net): Do a SIOCSIFADDR a 2nd time
	after setting the netmask (SIOCSIFNETMASK) in order for the newly
	set netmask to "take" - otherwise a bogus route based on the
	default netmask lurks within the system.

2000-11-10  Hugo Tyson  <hmt@redhat.com>

	* src/ecos/support.c (cyg_net_get_mem_stats): New API for getting
	info on the various mem pools the stack uses to enable tests to
	spot store leaks.

	* include/network.h (cyg_net_get_mem_stats): Export this API for
	automated network testing.

2000-10-24  Hugo Tyson  <hmt@redhat.com>

	* src/lib/tftp_server.c (tftpd_server): Cut down the chatter to
	nothing (unless there's an error) if running automated testing.

2000-10-17  Hugo Tyson  <hmt@redhat.com>
2000-10-10  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* src/ecos/support.c (setsoftnet,cyg_panic): Less chatter,
	particularly not when we're out of MBUFs.

2000-10-17  Hugo Tyson  <hmt@redhat.com>
2000-10-10  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* src/sys/net/if_bridge.c: Intergrated a more up to date version
	from the OpenBSD sources. This fixes a few bugs.

2000-10-17  Hugo Tyson  <hmt@redhat.com>

	* src/ecos/support.c (cyg_ktime_init): Start time at 1 Second so